# dpp_resolver_prototype

./: .gitignore  CLAUDE.md  IMPLEMENTATION_LOG.md  README.md  docker-compose.yml  pom.xml  tech_stack.md
dpp-platform-factory/: .dockerignore  .gitignore  Dockerfile  README.md  default-federation.yml  pom.xml  pyproject.toml
dpp-platform-factory/seed-schemas/: battery-1.0.json  inverter-1.0.json  pv_module-1.0.json
dpp-platform-factory/src/dpp_platform_factory/: __main__.py  main.py
dpp-platform-factory/tests/: conftest.py  test_api_federation.py  test_api_pause_resume.py  test_api_reset.py  test_api_seed.py  test_api_skeleton.py  test_api_spawn.py  test_api_teardown.py  test_bootstrap.py  test_config.py  test_docker_client.py  test_failures.py  test_orphans.py  test_platform.py  test_resolver.py  test_resolver_client.py  test_scenario.py  test_scenario_service.py  test_schema_seed_service.py  test_shutdown.py  test_state.py
dpp-platform-factory/tests/e2e/: test_factory_lifecycle.py  test_known_pv_battery_inverter_scenario.py
dpp-platform-factory/tests/helpers/: docker_env.py  fake_docker.py  fake_resolver.py  http_wait.py
dpp-workload-generator/: .gitignore  Dockerfile  README.md  pom.xml  pyproject.toml  scenario_implementation_tasks.md  workload_generator_implementation_tasks.md
dpp-workload-generator/scripts/: plot.py  sweep.ps1
dpp-workload-generator/src/workload/: cli.py  clients.py  federation.py  measurement.py  payloads.py  seed_schemas.py
dpp-workload-generator/tests/: test_cli.py  test_clients.py  test_depth_chain.py  test_fanout.py  test_federation.py  test_harden.py  test_measurement.py  test_payloads.py  test_pv_scenario.py  test_reporter.py  test_s1_scenario.py  test_s2_scenario.py  test_s4_predicate_queries.py  test_s4_scenario.py  test_schema_evolution.py  test_schemas.py
dpp-workload-generator/tests/e2e/: test_scenarios.py  test_workload_lifecycle.py
dpp-workload-generator/tests/measurements/: test_cli_resolve_fanout.py  test_graph.py  test_resolve_fanout.py  test_stats.py
generic_dpp_platform_python/: .env.example  Dockerfile  README.md  pom.xml  pyproject.toml
generic_dpp_platform_python/src/generic_dpp_platform/: config.py  database.py  logging_config.py  main.py
generic_dpp_platform_python/tests/: conftest.py  test_admin_import_revisions.py  test_cors.py  test_dpp_controller.py  test_dpp_current_revision.py  test_dpp_cycle_detection.py  test_dpp_error_handling.py  test_dpp_resolution_cache.py  test_dpp_revision_closure.py  test_dpp_revisions.py  test_dpp_util.py  test_hash_integrity.py  test_platform_config.py  test_predicate_query_integration.py  test_predicate_query_unit.py  test_reference_extractor.py  test_schemas.py  test_subject_types.py  test_traverse_query_integration.py  test_traverse_query_unit.py
query-client/: .env.example  README.md  pom.xml  pyproject.toml
query-client/examples/: query.json
query-client/src/query_client/: __init__.py  config.py  (+9 more)
query-client/tests/: support.py  test_api.py  test_contract.py  test_integration_complex.py  test_job_store.py  test_merger.py  test_models.py  test_resolver_client.py  test_run_query.py  test_service.py  test_validation.py
(+369 files in other folders)
