[project]
name = "dpp-platform-factory"
version = "0.1.0"
description = "DPP Platform Factory - spawns and manages platform containers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "docker>=7.1.0",
    "structlog>=25.1.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpp_platform_factory"]
