[project]
name = "workload-generator"
version = "0.1.0"
description = "DPP Workload Generator CLI"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2",
    "typer",
    "structlog",
    "pyyaml",
    "rich",
    "jcs",
]

[project.scripts]
workload = "workload.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pandas",
    "matplotlib",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workload"]
