[project]
name = "generic-dpp-platform"
version = "0.1.0"
description = "Generic DPP Platform - Python/FastAPI/MongoDB implementation"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "motor>=3.7.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "structlog>=25.1.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "jcs>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "testcontainers[mongodb]>=4.10.0",
    "anyio>=4.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generic_dpp_platform"]